@@ -123,6 +123,10 @@ Release date: TBA
 
   Closes #4525
 
+* Fix falsely issuing ``useless-suppression`` on the ``wrong-import-position`` checker.
+
+  Closes #5219
+
 * Fix false positive for ``unsubscriptable-object`` in Python 3.8 and below for
   statements guarded by ``if TYPE_CHECKING``.
 
